# am335x_edma

./: EDMA.md  Makefile  Makefile.am  Makefile.common  Makefile.kernel  README  README.md  bb-get-rcn-kernel-source-install-to-sd.sh  configure.ac  dma_drvr.c  edma-ebic.c  edmadev.c  edmadev.ko  memtest.c  mighty_dma.c  psetmem.py  testmodule.sh  transfer.c  transfer.h  transfer.ko  useredma.c
archive/: README
archive/ti_edma_sample/: Makefile  testmodule.sh  ti_edma_sample.c
ebic/mighty_ebic/: mighty_dma.c  mighty_dma.c.orig  test_dma.sh
include/: edma.h  mighty_dma.h
src/edma/: Makefile  Makefile.am  mighty.h  mighty_dma.c  mighty_dma.mod.c
src/user/: test_ioctl_START  userland.c
